lab1/Code/syntax.output
语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | VarDec LB error RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec
   26         | error COMMA
   27         | error RP

   28 CompSt: LC DefList StmtList RC
   29       | LC error RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | IF LP Exp RP error ELSE Stmt
   38     | WHILE LP Exp RP Stmt

   39 DefList: Def DefList
   40        | %empty

   41 Def: Specifier DecList SEMI
   42    | error SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp LB error RB
   62    | Exp DOT ID
   63    | ID
   64    | INT
   65    | FLOAT

   66 Args: Exp COMMA Args
   67     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 19 22 26 27 29 37 42 61
ID (258) 14 16 17 20 21 58 59 62 63
INT (259) 18 64
FLOAT (260) 65
SEMI (261) 4 5 7 32 34 41 42
COMMA (262) 9 23 26 44 66
ASSIGNOP (263) 46 47
RELOP (264) 50
PLUS (265) 51
MINUS (266) 52 56
STAR (267) 53
DIV (268) 54
AND (269) 48
OR (270) 49
DOT (271) 62
NOT (272) 57
TYPE (273) 10
STRUCT (274) 12 13
LP (275) 20 21 35 36 37 38 55 58 59
RP (276) 20 21 22 27 35 36 37 38 55 58 59
LB (277) 18 19 60 61
RB (278) 18 19 60 61
LC (279) 12 28 29
RC (280) 12 28 29
IF (281) 35 36 37
ELSE (282) 36 37
WHILE (283) 38
RETURN (284) 34
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    左： 0
Program (32)
    左： 1, 右： 0
ExtDefList (33)
    左： 2 3, 右： 1 2
ExtDef (34)
    左： 4 5 6 7, 右： 2
ExtDecList (35)
    左： 8 9, 右： 4 9
Specifier (36)
    左： 10 11, 右： 4 5 6 25 41
StructSpecifier (37)
    左： 12 13, 右： 11
OptTag (38)
    左： 14 15, 右： 12
Tag (39)
    左： 16, 右： 13
VarDec (40)
    左： 17 18 19, 右： 8 9 18 19 25 45 46
FunDec (41)
    左： 20 21 22, 右： 6
VarList (42)
    左： 23 24, 右： 20 23
ParamDec (43)
    左： 25 26 27, 右： 23 24
CompSt (44)
    左： 28 29, 右： 6 33
StmtList (45)
    左： 30 31, 右： 28 30
Stmt (46)
    左： 32 33 34 35 36 37 38, 右： 30 35 36 37 38
DefList (47)
    左： 39 40, 右： 12 28 39
Def (48)
    左： 41 42, 右： 39
DecList (49)
    左： 43 44, 右： 41 44
Dec (50)
    左： 45 46, 右： 43 44
Exp (51)
    左： 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65,
    右： 32 34 35 36 37 38 46 47 48 49 50 51 52 53 54 55 56 57 60
    61 62 66 67
Args (52)
    左： 66 67, 右： 58 66


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          转到状态 4
    ExtDefList       转到状态 5
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 15 (OptTag)

    OptTag  转到状态 11
    Tag     转到状态 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 14
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  转到状态 18
    VarDec      转到状态 19
    FunDec      转到状态 20


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  接受


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   22 FunDec: error . RP

    RP  shift, and go to state 22


State 16

   17 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 17 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 27

    CompSt  转到状态 28


State 21

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 29
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 40 (DefList)

    Specifier        转到状态 30
    StructSpecifier  转到状态 8
    DefList          转到状态 31
    Def              转到状态 32


State 22

   22 FunDec: error RP .

    $default  reduce using rule 22 (FunDec)


State 23

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    error   shift, and go to state 33
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 34

    Specifier        转到状态 35
    StructSpecifier  转到状态 8
    VarList          转到状态 36
    ParamDec         转到状态 37


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  转到状态 39
    VarDec      转到状态 19


State 26

   18 VarDec: VarDec LB . INT RB
   19       | VarDec LB . error RB

    error  shift, and go to state 40
    INT    shift, and go to state 41


State 27

   28 CompSt: LC . DefList StmtList RC
   29       | LC . error RC

    error   shift, and go to state 42
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    ID      reduce using rule 40 (DefList)
    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)

    Specifier        转到状态 30
    StructSpecifier  转到状态 8
    DefList          转到状态 43
    Def              转到状态 32


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   42 Def: error . SEMI

    SEMI  shift, and go to state 44


State 30

   41 Def: Specifier . DecList SEMI

    ID  shift, and go to state 38

    VarDec   转到状态 45
    DecList  转到状态 46
    Dec      转到状态 47


State 31

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 48


State 32

   39 DefList: Def . DefList

    error   shift, and go to state 29
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    ID      reduce using rule 40 (DefList)
    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)

    Specifier        转到状态 30
    StructSpecifier  转到状态 8
    DefList          转到状态 49
    Def              转到状态 32


State 33

   26 ParamDec: error . COMMA
   27         | error . RP

    COMMA  shift, and go to state 50
    RP     shift, and go to state 51


State 34

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 35

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  转到状态 52


State 36

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 53


State 37

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 54

    $default  reduce using rule 24 (VarList)


State 38

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 39

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 40

   19 VarDec: VarDec LB error . RB

    RB  shift, and go to state 55


State 41

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 56


State 42

   29 CompSt: LC error . RC
   42 Def: error . SEMI

    SEMI  shift, and go to state 44
    RC    shift, and go to state 57


State 43

   28 CompSt: LC DefList . StmtList RC

    ID      shift, and go to state 58
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 27
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65
    RETURN  shift, and go to state 66

    $default  reduce using rule 31 (StmtList)

    CompSt    转到状态 67
    StmtList  转到状态 68
    Stmt      转到状态 69
    Exp       转到状态 70


State 44

   42 Def: error SEMI .

    $default  reduce using rule 42 (Def)


State 45

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB
   45 Dec: VarDec .
   46    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 71
    LB        shift, and go to state 26

    $default  reduce using rule 45 (Dec)


State 46

   41 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 72


State 47

   43 DecList: Dec .
   44        | Dec . COMMA DecList

    COMMA  shift, and go to state 73

    $default  reduce using rule 43 (DecList)


State 48

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 49

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


State 50

   26 ParamDec: error COMMA .

    $default  reduce using rule 26 (ParamDec)


State 51

   27 ParamDec: error RP .

    $default  reduce using rule 27 (ParamDec)


State 52

   18 VarDec: VarDec . LB INT RB
   19       | VarDec . LB error RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 25 (ParamDec)


State 53

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 54

   23 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 33
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        转到状态 35
    StructSpecifier  转到状态 8
    VarList          转到状态 74
    ParamDec         转到状态 37


State 55

   19 VarDec: VarDec LB error RB .

    $default  reduce using rule 19 (VarDec)


State 56

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 57

   29 CompSt: LC error RC .

    $default  reduce using rule 29 (CompSt)


State 58

   58 Exp: ID . LP Args RP
   59    | ID . LP RP
   63    | ID .

    LP  shift, and go to state 75

    $default  reduce using rule 63 (Exp)


State 59

   64 Exp: INT .

    $default  reduce using rule 64 (Exp)


State 60

   65 Exp: FLOAT .

    $default  reduce using rule 65 (Exp)


State 61

   56 Exp: MINUS . Exp

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 76


State 62

   57 Exp: NOT . Exp

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 77


State 63

   55 Exp: LP . Exp RP

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 78


State 64

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt
   37     | IF . LP Exp RP error ELSE Stmt

    LP  shift, and go to state 79


State 65

   38 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 80


State 66

   34 Stmt: RETURN . Exp SEMI

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 81


State 67

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 68

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 82


State 69

   30 StmtList: Stmt . StmtList

    ID      shift, and go to state 58
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 27
    IF      shift, and go to state 64
    WHILE   shift, and go to state 65
    RETURN  shift, and go to state 66

    $default  reduce using rule 31 (StmtList)

    CompSt    转到状态 67
    StmtList  转到状态 83
    Stmt      转到状态 69
    Exp       转到状态 70


State 70

   32 Stmt: Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . LB error RB
   62    | Exp . DOT ID

    SEMI      shift, and go to state 84
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94


State 71

   46 Dec: VarDec ASSIGNOP . Exp

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 95


State 72

   41 Def: Specifier DecList SEMI .

    $default  reduce using rule 41 (Def)


State 73

   44 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   转到状态 45
    DecList  转到状态 96
    Dec      转到状态 47


State 74

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 75

   58 Exp: ID LP . Args RP
   59    | ID LP . RP

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    RP     shift, and go to state 97

    Exp   转到状态 98
    Args  转到状态 99


State 76

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   56    | MINUS Exp .
   60    | Exp . LB Exp RB
   61    | Exp . LB error RB
   62    | Exp . DOT ID

    STAR  shift, and go to state 89
    DIV   shift, and go to state 90
    DOT   shift, and go to state 93
    LB    shift, and go to state 94

    $default  reduce using rule 56 (Exp)


State 77

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   57    | NOT Exp .
   60    | Exp . LB Exp RB
   61    | Exp . LB error RB
   62    | Exp . DOT ID

    DOT  shift, and go to state 93
    LB   shift, and go to state 94

    $default  reduce using rule 57 (Exp)


State 78

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   55    | LP Exp . RP
   60    | Exp . LB Exp RB
   61    | Exp . LB error RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    RP        shift, and go to state 100
    LB        shift, and go to state 94


State 79

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . Exp RP Stmt ELSE Stmt
   37     | IF LP . Exp RP error ELSE Stmt

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 101


State 80

   38 Stmt: WHILE LP . Exp RP Stmt

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 102


State 81

   34 Stmt: RETURN Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . LB error RB
   62    | Exp . DOT ID

    SEMI      shift, and go to state 103
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94


State 82

   28 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


State 83

   30 StmtList: Stmt StmtList .

    $default  reduce using rule 30 (StmtList)


State 84

   32 Stmt: Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 85

   47 Exp: Exp ASSIGNOP . Exp

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 104


State 86

   50 Exp: Exp RELOP . Exp

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 105


State 87

   51 Exp: Exp PLUS . Exp

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 106


State 88

   52 Exp: Exp MINUS . Exp

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 107


State 89

   53 Exp: Exp STAR . Exp

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 108


State 90

   54 Exp: Exp DIV . Exp

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 109


State 91

   48 Exp: Exp AND . Exp

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 110


State 92

   49 Exp: Exp OR . Exp

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 111


State 93

   62 Exp: Exp DOT . ID

    ID  shift, and go to state 112


State 94

   60 Exp: Exp LB . Exp RB
   61    | Exp LB . error RB

    error  shift, and go to state 113
    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 114


State 95

   46 Dec: VarDec ASSIGNOP Exp .
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . LB error RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94

    $default  reduce using rule 46 (Dec)


State 96

   44 DecList: Dec COMMA DecList .

    $default  reduce using rule 44 (DecList)


State 97

   59 Exp: ID LP RP .

    $default  reduce using rule 59 (Exp)


State 98

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . LB error RB
   62    | Exp . DOT ID
   66 Args: Exp . COMMA Args
   67     | Exp .

    COMMA     shift, and go to state 115
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94

    $default  reduce using rule 67 (Args)


State 99

   58 Exp: ID LP Args . RP

    RP  shift, and go to state 116


State 100

   55 Exp: LP Exp RP .

    $default  reduce using rule 55 (Exp)


State 101

   35 Stmt: IF LP Exp . RP Stmt
   36     | IF LP Exp . RP Stmt ELSE Stmt
   37     | IF LP Exp . RP error ELSE Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . LB error RB
   62    | Exp . DOT ID
